--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./3-column-preview-card-component-main/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -22,14 +22,14 @@
 <body>
   <div class="main"> 
     <div class="block1">
-      <img src="./images/icon-sedans.svg" alt=""> 
+      <img src="./3-column-preview-card-component-main/images/icon-sedans.svg" alt=""> 
   <h1>SEDANS</h1>
   <P> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.</P>
   <button class="btn1"> Learn More </button>
     </div>
 <div class="block2"> 
-  <img src="./images/icon-suvs.svg" alt=""> 
+  <img src="./3-column-preview-card-component-main/images/icon-suvs.svg" alt=""> 
 
   <h1>SUVS</h1>
   <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
@@ -39,7 +39,7 @@
 </div>
 
 <div class="block3">
-  <img src="./images/icon-luxury.svg" alt="">
+  <img src="./3-column-preview-card-component-main/images/icon-luxury.svg" alt="">
 
   <h1>LUXURY</h1>
   <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
